--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "docco": "~0.6"
   },
   "devDependencies": {
-    "grunt": "~0.4"
+    "grunt": "~0.4",
+    "grunt-cli": "~0.1"
   },
   "keywords": [
     "gruntplugin"
