--- a/package.json
+++ b/package.json
@@ -16,12 +16,7 @@
   "bugs": {
     "url": "https://github.com/abovethewater/grunt-docco-multi/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://abovethewater.mit-license.org"
-    }
-  ],
+  "license": "MIT",
   "main": "grunt.js",
   "engineStrict" : true,
   "engines": {
