--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "grunt test"
   },
   "peerDependencies": {
-    "grunt": "~0.4"
+    "grunt": ">=0.4.0"
   },
   "dependencies": {
     "docco": "~0.6.2"
